@@ -68,7 +68,7 @@ class GenerateJSCode
             "oAuthProvider", "oAuthClientID", "oAuthRedirect", "passwordPolicy", "documentRootPrefix", "dbClass",
             "dbDSN", "nonSupportMessageId", "valuesForLocalContext", "themeName", "appLocale", "appCurrency",
             "resetPage", "enrollPage", "serviceServerPort", "serviceServerHost", "activateClientService",
-            "follwingTimezones"
+            "followingTimezones"
         ), true);
         $generatedPrivateKey = $params["generatedPrivateKey"];
         $passPhrase = $params["passPhrase"];
@@ -98,7 +98,7 @@ class GenerateJSCode
             ? $params['serviceServerHost'] : $_SERVER['SERVER_ADDR'];
         $serviceServerHost = $serviceServerHost ? $serviceServerHost : 'localhost';
         $activateClientService = isset($params['activateClientService']) ? boolval($params['activateClientService']) : false;
-        $follwingTimezones =isset($params['follwingTimezones']) ? boolval($params['follwingTimezones']) : false;
+        $followingTimezones =isset($params['followingTimezones']) ? boolval($params['followingTimezones']) : false;
 
         $serverName = isset($_SERVER['SCRIPT_NAME']) ? $_SERVER['SCRIPT_NAME'] : 'Not_on_web_server';
         $documentRoot = isset($_SERVER['DOCUMENT_ROOT']) ? $_SERVER['DOCUMENT_ROOT'] : 'Not_on_web_server';
@@ -381,7 +381,7 @@ class GenerateJSCode
         $this->generateAssignJS("INTERMediatorOnPage.serviceServerPort", $serviceServerPort);
         $this->generateAssignJS("INTERMediatorOnPage.serviceServerHost", $q, $serviceServerHost, $q);
         $this->generateAssignJS("INTERMediatorOnPage.serverDefaultTimezone", $q, date_default_timezone_get(), $q);
-        $this->generateAssignJS("INTERMediatorOnPage.isFollowingTimezone", $follwingTimezones ? "true" : "false");
+        $this->generateAssignJS("INTERMediatorOnPage.isFollowingTimezone", $followingTimezones ? "true" : "false");
     }
 
     private function combineScripts()
